# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  08 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: 
  Added check to lockfile and fetch, if file already is owned by 
  portage group, don't try and chown it.  This will close #60079.

  08 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/emerge: Fixed a 
  traceback issue, an ebuild is no longer in the tree, but is installed 
  and needs to be used in the depgraph- the problem was, emerge 
  assumed the ebuild was in porttree's db, when vartree should be used 
  if the package is known to be installed.

  08 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py:
  Killed a couple of corner cases for non-root fetch and lockfile calls.

  08 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py
  bin/ebuild.sh: Add check to ensure that install phase has been 
  ran prior to qmerge phase being attempted.  This can happen 
  when the user is using ebuild to step through the phases.
  Corrected bug in listdir where it would return None, rather then 
  []- all callee's expect a returned list, not None.  Same for ftype,
  cause's a tb if you just haphazardly rely on cachedir's return.

  08 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: 
  Leave /var/tmp w/out it's own permissions, chowning/chmoding just 
  /var/tmp/portage (#37521).

  08 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh 
  pym/portage.py: Corrected bug in profile.bashrc support, added aliases 
  for saving/restoring IFS (remove_path_entry and profile.bashrc loop 
  adjust IFS temporarily).  Closes #59749.

  08 Aug 2004; Brian Harring <ferringb@gentoo.org> dispatch-conf: 