@@ -9,6 +9,9 @@
     4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
        It is for convenience. Do not mistake this for the actual file.
 
+  08 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh: 
+  Added FEATURES="autoconfig" support. (#55476)
+
   08 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: 
   Added check to lockfile and fetch, if file already is owned by 
   portage group, don't try and chown it.  This will close #60079.
